Fix navbar z-index to avoid overlap with headers

--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -5,7 +5,7 @@
     width: 100%;
     position: sticky;
     top: 0;
-    z-index: 1000;
+    z-index: 9999;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
